@@ -1,3 +1,8 @@
+2006-03-10  Zoltan Varga  <vargaz@gmail.com>
+
+	* MonoCustomAttrs.cs (IsDefined): Avoid a runtime assert if a type
+	overwrites GetCustomAttributes () but not IsDefined ().
+
 2006-03-07  Martin Baulig  <martin@ximian.com>
 
 	* String.cs (String.FormatHelper): Try getting an `ICustomFormatter'
